...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <!--Main Content-->
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
...
            android:paddingHorizontal="40sp"
            android:src="@drawable/dotted" />


        <!--Answer Group-->
        <RadioGroup
            android:id="@+id/radioButtonGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="40sp">

            <!--Answer1-->
            <RadioButton
                android:id="@+id/radio_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/main_blue"
                android:textColor="@color/main_blue"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <!--Answer2-->
            <RadioButton
                android:id="@+id/radio_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/main_blue"
                android:textColor="@color/main_blue" />

            <!--Answer3-->
            <RadioButton
                android:id="@+id/radio_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/main_blue"
                android:textColor="@color/main_blue" />

            <!--Answer4-->
...
                android:textColor="@color/main_blue" />
        </RadioGroup>


        <!--Next Button-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="90sp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="20sp"
            android:background="@drawable/my_button_bg"
            android:onClick="nextButton"
            android:text="@string/button_next"
            android:textColor="@color/main_blue" />

        <!--Previous Button-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/previous_button"
            android:layout_width="55dp"
            android:layout_height="20sp"
            android:layout_gravity="center"
            android:background="#0000"
            android:text="@string/button_previous"
            android:textAlignment="center"
...
