...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ScrollView
        android:id="@+id/instructio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100sp"
        android:layout_marginBottom="40sp"
        android:layout_marginHorizontal="20sp"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/inscontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/instruction_content"
...
            android:layout_width="110sp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="30sp"
            android:background="@drawable/my_button_bg"
            android:onClick="nextButton"
            android:text="Understand"
            android:textColor="@color/main_blue" />
        </LinearLayout>
    </ScrollView>



...
